# diskalert

./: .gitignore  README.md  pyproject.toml  setup.py
DiskAlert/: __main__.py  detect.py  mailer.py  settings.py
etc/: diskalert.1  diskalert.conf
src/diskalert/: __main__.py  cli.py  detect.py
