[project]
name = "diskalert"
version = "0.1.1"
authors = [
    {name="M. Emre Aydin", email="eaydin@veriteknik.com"},
    {name="Tunc Yildirim", email="tunc@veriteknik.com"},
]
maintainers = [
    {name="Timothy Weber", email="tw@6sys.net"},
]
description = "A utility to send email if a disk is low on space"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/eaydin/diskalert"

[project.scripts]
diskalert = "diskalert.cli:app"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"